# lenso

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile  package.json  tegami.config.mjs
apps/api/: Cargo.toml
apps/api/src/: admin_runtime.rs  lib.rs  main.rs  openapi.rs
apps/api/tests/: admin_data_console.rs  admin_system.rs  config_console.rs  console_extensions.rs  cors.rs  identity_routes.rs  openapi_contract.rs  remote_module_smoke.rs  runtime_console.rs
crates/app-bootstrap/: Cargo.toml
crates/app-bootstrap/src/: lib.rs
crates/lenso/: CHANGELOG.md  Cargo.toml  README.md
crates/lenso-api/: CHANGELOG.md  Cargo.toml
crates/lenso-api/src/: lib.rs  main.rs  openapi.rs  system_delivery.rs
crates/lenso-api/tests/: admin_data_console.rs  admin_system.rs  config_console.rs  console_extensions.rs  console_oidc.rs  cors.rs  host_wiring.rs  openapi_contract.rs  remote_module_smoke.rs  runtime_console.rs
crates/lenso-autonomous-service/: CHANGELOG.md  Cargo.toml  README.md
crates/lenso-autonomous-service/migrations/: 0001_create_story_segments.sql  0002_create_worker_runtime.sql  0003_create_event_delivery.sql  0004_create_local_transport.sql  0005_make_event_inbox_idempotent.sql  0006_classify_event_delivery_failures.sql  0007_schedule_local_transport_retry.sql  0008_manage_dead_letter_replays.sql  0009_create_nats_jetstream_transport_diagnostics.sql  0010_create_durable_workflows.sql  0011_advance_durable_workflow_steps.sql  0012_recover_workflow_retries_and_timers.sql  0012_run_child_workflows.sql  0013_recover_workflow_retries_and_timers.sql  0014_pin_workflow_definition_artifacts.sql  0015_compensate_workflow_effects.sql  0016_create_workflow_compensations.sql  0017_create_workflow_compensation_history.sql  0018_control_workflow_instances.sql  0019_protect_workflow_terminal_operations.sql  0019_publish_story_segment_feed.sql  0020_publish_story_segment_feed.sql
crates/lenso-autonomous-service/src/: lib.rs  operations.rs  reliability.rs  story_feed.rs  transport.rs  transport_nats_jetstream.rs  workflow.rs  workflow_child.rs  workflow_compensation.rs
crates/lenso-autonomous-service/tests/: dead_letter_operations.rs  runtime.rs  story_segment_feed.rs  transport.rs  transport_conformance.rs  workflow.rs
crates/lenso-bootstrap/: CHANGELOG.md  Cargo.toml
crates/lenso-bootstrap/src/: lib.rs
crates/lenso-cli/: Cargo.toml  README.md
crates/lenso-cli/src/: host.rs  main.rs  module.rs
crates/lenso-contracts/: CHANGELOG.md  Cargo.toml
crates/lenso-contracts/src/: admin.rs  console.rs  cron.rs  events.rs  http.rs  lib.rs  manifest.rs  operation.rs  runtime.rs
crates/lenso-host/: Cargo.toml  README.md
crates/lenso-host/src/: lib.rs
crates/lenso-migrate/: CHANGELOG.md  Cargo.toml
crates/lenso-migrate/src/: lib.rs  main.rs
crates/lenso-operator/: Cargo.toml
crates/lenso-operator/src/: autonomous.rs  autonomous_reconcile.rs  autonomous_resources.rs  autonomous_status.rs  crd.rs  lib.rs  main.rs  reconcile.rs  resources.rs
crates/lenso-operator/tests/: crd_contract.rs  resource_builders.rs
crates/lenso-service/: CHANGELOG.md  Cargo.toml  build.rs
crates/lenso-service/docs/: common-context-contracts.md  contract-compatibility.md  request-response-compatibility.md
crates/lenso-service/schemas/: lenso-context.v1.schema.json  lenso-event-envelope.v1.schema.json  lenso-module-release.v1.schema.json  lenso-module.v1.schema.json  lenso-service-package.v1.schema.json  lenso-service-workspace.v1.schema.json  lenso-service.v1.schema.json  lenso-service.v2.schema.json  lenso-system.v1.schema.json  lenso-system.v2.schema.json
crates/lenso-service/src/: call_policy.rs  delegated_context.rs  delivery_console_projection.rs  delivery_failure_recovery.rs  direct_grpc.rs  direct_http.rs  disaster_recovery.rs  endpoint_resolution.rs  event_envelope.rs  extraction_authority_commit.rs  extraction_backfill.rs  extraction_console_projection.rs  extraction_plan.rs  extraction_provisional_cutover.rs  extraction_quiescence.rs  extraction_readiness.rs  extraction_reconciliation.rs  extraction_run.rs  extraction_scaffold.rs  extraction_verification.rs  ga_support.rs  lib.rs  performance_profile.rs  reliability_report.rs  security_review.rs  service_backup.rs  story_segment.rs  support_envelope.rs  workload_identity.rs
crates/lenso-service/tests/: call_policy.rs  contract.rs  delegated_context.rs  direct_grpc.rs  direct_http.rs  endpoint_resolution.rs  event_envelope.rs  extraction_authority_commit.rs  extraction_backfill.rs  extraction_console_projection.rs  extraction_provisional_cutover.rs  extraction_quiescence.rs  extraction_reconciliation.rs  extraction_verification.rs  ga_support.rs  m6_recovery_performance.rs  production_delivery.rs  production_delivery_console.rs  spiffe_workload_identity.rs  workload_identity.rs
crates/lenso-worker/: CHANGELOG.md  Cargo.toml
crates/lenso-worker/src/: lib.rs  main.rs
crates/lenso/src/: events.rs  host.rs  http.rs  lib.rs  manifest.rs  module_source.rs  story_display.rs
crates/lenso/tests/: host_outbox_relay.rs
crates/platform-admin/: CHANGELOG.md  Cargo.toml
crates/platform-admin-data/: CHANGELOG.md  Cargo.toml
crates/platform-admin-data/catalogs/: lenso-official-module-catalog.json
crates/platform-admin-data/src/: dto.rs  handlers.rs  lib.rs
crates/platform-admin/src/: config_dto.rs  config_handlers.rs  dto.rs  fetch.rs  (+7 more)
crates/platform-core/: CHANGELOG.md  Cargo.toml
crates/platform-http/: CHANGELOG.md  Cargo.toml
crates/platform-module/: CHANGELOG.md  Cargo.toml
crates/platform-module-remote/: CHANGELOG.md  Cargo.toml
crates/platform-runtime/: CHANGELOG.md  Cargo.toml
crates/platform-testing/: CHANGELOG.md  Cargo.toml
domains/identity/: Cargo.toml
domains/notifications/: Cargo.toml
examples/remote-module/: Cargo.toml  README.md
modules/auth/: Cargo.toml
modules/auth-password/: Cargo.toml
modules/story/: CHANGELOG.md  Cargo.toml
templates/starter-host/: .env.example  Cargo.toml  README.md
tools/arch-check/: Cargo.toml
(+770 files in other folders)
