[workspace]
resolver = "2"
members = [
    "fixtures/remote-module",
    "crates/lenso",
    "crates/lenso-api",
    "crates/lenso-host",
    "crates/lenso-cli",
    "crates/lenso-migrate",
    "crates/lenso-worker",
    "crates/lenso-bootstrap",
    "crates/platform-admin",
    "crates/platform-admin-data",
    "crates/platform-core",
    "crates/platform-module",
    "crates/platform-module-remote",
    "crates/platform-http",
    "crates/platform-runtime",
    "crates/platform-testing",
    "modules/auth",
    "modules/auth-password",
    "modules/story",
    "tools/generate-contracts",
    "tools/arch-check",
    "tools/otel-smoke",
]

[workspace.package]
edition = "2024"
license = "UNLICENSED"
publish = false
rust-version = "1.94"

[workspace.dependencies]
anyhow = "1.0"
argon2 = "0.5.3"
arc-swap = "1"
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
http = "1.4"
include_dir = "0.7"
getrandom = "0.4"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
opentelemetry = "0.32"
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
prost = "0.14"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.11"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "uuid", "chrono", "json"] }
thiserror = "2.0"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "signal", "time"] }
tonic = { version = "0.14", default-features = false, features = ["channel", "codegen"] }
tonic-prost = "0.14"
tower = "0.5"
tower-http = { version = "0.7", features = ["trace", "request-id", "util", "cors", "fs"] }
tracing = "0.1"
tracing-opentelemetry = "0.33"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
utoipa = { version = "5.5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2"
uuid = { version = "1.23", features = ["serde", "v7"] }

lenso = { path = "crates/lenso", version = "0.2.1" }
platform-core = { path = "crates/platform-core" }
platform-admin = { path = "crates/platform-admin" }
platform-admin-data = { path = "crates/platform-admin-data" }
platform-module = { path = "crates/platform-module" }
platform-module-remote = { path = "crates/platform-module-remote" }
platform-http = { path = "crates/platform-http" }
platform-runtime = { path = "crates/platform-runtime" }
platform-testing = { path = "crates/platform-testing" }
lenso-bootstrap = { path = "crates/lenso-bootstrap" }
lenso-api = { path = "crates/lenso-api" }
lenso-migrate = { path = "crates/lenso-migrate" }
lenso-worker = { path = "crates/lenso-worker" }
lenso-host = { path = "crates/lenso-host" }
lenso-cli = { path = "crates/lenso-cli" }
auth = { path = "modules/auth" }
auth-password = { path = "modules/auth-password" }
story = { path = "modules/story" }
generate-contracts = { path = "tools/generate-contracts" }
arch-check = { path = "tools/arch-check" }
remote-module-fixture = { path = "fixtures/remote-module" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
