[workspace]
resolver = "2"
members = [
    "fixtures/remote-module",
    "crates/lenso-contracts",
    "crates/lenso",
    "crates/lenso-api",
    "crates/lenso-migrate",
    "crates/lenso-worker",
    "crates/lenso-bootstrap",
    "crates/lenso-service",
    "crates/lenso-autonomous-service",
    "crates/lenso-operator",
    "crates/platform-admin",
    "crates/platform-admin-data",
    "crates/platform-core",
    "crates/platform-module",
    "crates/platform-module-remote",
    "crates/platform-http",
    "crates/platform-runtime",
    "crates/platform-testing",
    "modules/story",
    "tools/generate-contracts",
    "tools/arch-check",
    "tools/otel-smoke",
]

[workspace.package]
edition = "2024"
license = "UNLICENSED"
publish = false
rust-version = "1.94"

[workspace.dependencies]
anyhow = "1.0"
argon2 = "0.5.3"
arc-swap = "1"
async-trait = "0.1"
async-nats = { version = "0.49.1", default-features = false, features = ["jetstream", "nkeys", "ring", "server_2_14"] }
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
ed25519-dalek = "2.2"
http = "1.4"
getrandom = "0.4"
futures = "0.3"
hmac = "0.13"
jsonschema = { version = "0.47", default-features = false }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
opentelemetry = "0.32"
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
prost = "0.14"
prost-types = "0.14"
prost-build = "0.14"
protoc-bin-vendored = "3"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }
redis = { version = "1.2", default-features = false, features = ["tokio-comp", "connection-manager"] }
rsa = "0.9.10"
rustls = "0.23"
schemars = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.11"
spiffe = { version = "0.16", features = ["jwt-source", "jwt-verify-rust-crypto", "x509-source"] }
spiffe-rustls = "0.7"
spiffe-rustls-tokio = "0.4"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "uuid", "chrono", "json"] }
thiserror = "2.0"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.14", default-features = false, features = ["channel", "codegen", "router", "server"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tower = "0.5"
tower-http = { version = "0.7", features = ["trace", "request-id", "util", "cors", "fs"] }
tracing = "0.1"
tracing-opentelemetry = "0.33"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
utoipa = { version = "5.5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2"
uuid = { version = "1.23", features = ["serde", "v7"] }

lenso = { path = "crates/lenso", version = "0.3.19" }
lenso-contracts = { path = "crates/lenso-contracts", version = "0.3.5" }
platform-core = { package = "lenso-platform-core", path = "crates/platform-core", version = "0.1.5" }
platform-admin = { package = "lenso-platform-admin", path = "crates/platform-admin", version = "0.1.5" }
platform-admin-data = { package = "lenso-platform-admin-data", path = "crates/platform-admin-data", version = "0.1.10" }
platform-module = { package = "lenso-platform-module", path = "crates/platform-module", version = "0.1.5" }
platform-module-remote = { package = "lenso-platform-module-remote", path = "crates/platform-module-remote", version = "0.1.5" }
platform-http = { package = "lenso-platform-http", path = "crates/platform-http", version = "0.1.4" }
platform-runtime = { package = "lenso-platform-runtime", path = "crates/platform-runtime", version = "0.1.2" }
platform-testing = { package = "lenso-platform-testing", path = "crates/platform-testing", version = "0.1.1" }
lenso-bootstrap = { path = "crates/lenso-bootstrap", version = "0.1.12" }
lenso-api = { path = "crates/lenso-api", version = "0.1.13" }
lenso-migrate = { path = "crates/lenso-migrate", version = "0.1.11" }
lenso-worker = { path = "crates/lenso-worker", version = "0.1.11" }
lenso-service = { path = "crates/lenso-service", version = "0.1.4" }
lenso-autonomous-service = { path = "crates/lenso-autonomous-service", version = "0.1.0" }
lenso-operator = { path = "crates/lenso-operator" }
auth = { package = "lenso-module-auth", version = "0.1.8", features = ["redis"] }
auth-anonymous = { package = "lenso-module-auth-anonymous", version = "0.1.0" }
auth-github = { package = "lenso-module-auth-github", version = "0.1.0" }
auth-google = { package = "lenso-module-auth-google", version = "0.1.0" }
auth-oauth = { package = "lenso-module-auth-oauth", version = "0.1.1" }
auth-oidc = { package = "lenso-module-auth-oidc", version = "0.1.1" }
auth-password = { package = "lenso-module-auth-password", version = "0.1.9" }
auth-phone = { package = "lenso-module-auth-phone", version = "0.1.1" }
story = { package = "lenso-module-story", path = "modules/story", version = "0.1.4" }
generate-contracts = { path = "tools/generate-contracts" }
arch-check = { path = "tools/arch-check" }
remote-module-fixture = { path = "fixtures/remote-module" }

[patch.crates-io]
lenso-contracts = { path = "crates/lenso-contracts" }
lenso-platform-core = { path = "crates/platform-core" }
lenso-platform-http = { path = "crates/platform-http" }
lenso-platform-module = { path = "crates/platform-module" }
lenso-platform-runtime = { path = "crates/platform-runtime" }
lenso-platform-testing = { path = "crates/platform-testing" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
