[package]
name = "app-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
app-bootstrap.workspace = true
axum.workspace = true
chrono.workspace = true
identity.workspace = true
platform-admin.workspace = true
platform-admin-data.workspace = true
platform-core.workspace = true
platform-http.workspace = true
platform-module-remote.workspace = true
platform-runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
story.workspace = true
tokio.workspace = true
tracing.workspace = true
tower-http.workspace = true
utoipa.workspace = true

[dev-dependencies]
async-trait.workspace = true
platform-module.workspace = true
platform-testing.workspace = true
remote-module-example.workspace = true
serde_yaml.workspace = true
tower = { workspace = true, features = ["util"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "app-api"
path = "src/main.rs"

[lints]
workspace = true
