[package]
name = "app-bootstrap"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
platform-core.workspace = true
platform-module.workspace = true
platform-admin-data.workspace = true
platform-http.workspace = true
platform-runtime.workspace = true
identity.workspace = true
notifications.workspace = true

[lints]
workspace = true
