[package]
name = "app-bootstrap"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
platform-core.workspace = true
platform-module.workspace = true
platform-module-remote.workspace = true
platform-admin-data.workspace = true
platform-http.workspace = true
platform-runtime.workspace = true
auth.workspace = true
auth-password.workspace = true
story.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true
platform-testing.workspace = true
sqlx.workspace = true
tokio.workspace = true

[lints]
workspace = true
