[package]
name = "lenso-api"
version = "0.1.10"
edition.workspace = true
license = "MIT"
description = "HTTP API host crate for the Lenso backend framework."
repository = "https://github.com/LioRael/lenso"
homepage = "https://github.com/LioRael/lenso"
categories = ["web-programming", "development-tools"]
keywords = ["backend", "framework", "host"]
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
lenso-bootstrap.workspace = true
axum.workspace = true
chrono.workspace = true
platform-admin.workspace = true
platform-admin-data.workspace = true
platform-core.workspace = true
platform-http.workspace = true
platform-module-remote.workspace = true
platform-runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tower-http.workspace = true
utoipa.workspace = true

[dev-dependencies]
async-trait.workspace = true
auth.workspace = true
auth-password.workspace = true
platform-module.workspace = true
platform-testing.workspace = true
remote-module-fixture.workspace = true
rsa.workspace = true
serde_yaml.workspace = true
tower = { workspace = true, features = ["util"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "lenso-api"
path = "src/main.rs"

[lints]
workspace = true
