[package]
name = "lenso-autonomous-service"
version = "0.1.0"
edition.workspace = true
license = "MIT"
description = "Host-independent runtime for Lenso Autonomous Services."

[dependencies]
axum.workspace = true
chrono.workspace = true
lenso-service.workspace = true
platform-core.workspace = true
platform-http.workspace = true
platform-runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["macros"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["net"] }
tracing.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
http-body-util = "0.1"
http.workspace = true
platform-testing.workspace = true
tower.workspace = true

[lints]
workspace = true
