[package]
name = "lenso-bootstrap"
version = "0.1.9"
edition.workspace = true
license = "MIT"
description = "Composition root for first-party Lenso host modules."
repository = "https://github.com/LioRael/lenso"
homepage = "https://github.com/LioRael/lenso"
categories = ["web-programming", "development-tools"]
keywords = ["backend", "framework", "modules"]
rust-version.workspace = true

[dependencies]
platform-core.workspace = true
platform-module.workspace = true
platform-module-remote.workspace = true
platform-admin-data.workspace = true
platform-http.workspace = true
platform-runtime.workspace = true
auth.workspace = true
auth-oidc.workspace = true
auth-password.workspace = true
story.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true
platform-testing.workspace = true
sqlx.workspace = true
tokio.workspace = true

[lints]
workspace = true
