[package]
name = "lenso-cli"
version = "0.1.0"
edition.workspace = true
license = "MIT"
description = "Lenso command-line interface for scaffolding and operating Lenso backend projects."
repository = "https://github.com/LioRael/lenso"
homepage = "https://github.com/LioRael/lenso"
rust-version.workspace = true
categories = ["command-line-utilities", "development-tools"]
keywords = ["cli", "scaffold", "backend", "framework"]
include = [
    "src/**/*.rs",
    "templates/**",
    "README.md",
    "Cargo.toml",
]

[[bin]]
name = "lenso"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
include_dir.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
