[package]
name = "lenso-contracts"
version = "0.3.9"
edition.workspace = true
license = "MIT"
description = "Shared declaration contracts for the Lenso backend framework."
repository = "https://github.com/LioRael/lenso"
homepage = "https://github.com/LioRael/lenso"
rust-version.workspace = true
categories = ["web-programming", "development-tools"]
keywords = ["backend", "framework", "modules", "contracts"]

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true

[lints]
workspace = true
