[package]
name = "lenso-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
description = "Internal host boot facade for the Lenso backend framework."

[dependencies]
anyhow.workspace = true
app-api.workspace = true
app-bootstrap.workspace = true
app-migrate.workspace = true
app-worker.workspace = true
axum.workspace = true
lenso.workspace = true
platform-core.workspace = true
platform-http.workspace = true
platform-module.workspace = true

[lints]
workspace = true
