[package]
name = "lenso-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
description = "Host boot facade for Lenso backend applications."
repository = "https://github.com/LioRael/lenso"
homepage = "https://github.com/LioRael/lenso"
readme = "README.md"
categories = ["web-programming", "development-tools"]
keywords = ["backend", "framework", "host", "runtime"]

[dependencies]
lenso = { workspace = true, features = ["host"] }

[lints]
workspace = true
