[package]
name = "lenso-migrate"
version = "0.1.3"
edition.workspace = true
license = "MIT"
description = "Migration runner for the Lenso host runtime."
repository = "https://github.com/LioRael/lenso"
homepage = "https://github.com/LioRael/lenso"
categories = ["web-programming", "development-tools"]
keywords = ["backend", "framework", "migrations"]
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
lenso-bootstrap.workspace = true
platform-core.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
