[package]
name = "lenso-operator"
version = "0.1.0"
edition.workspace = true
license = "MIT"
description = "Kubernetes operator for Lenso service providers."
repository = "https://github.com/LioRael/lenso"
homepage = "https://github.com/LioRael/lenso"
categories = ["web-programming", "development-tools"]
keywords = ["backend", "framework", "kubernetes"]
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
futures = "0.3"
k8s-openapi = { version = "0.28", features = ["v1_36", "schemars"] }
kube = { version = "4", features = ["client", "derive", "runtime", "rustls-tls"] }
schemars = "1"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
