[package]
name = "lenso-service"
version = "0.1.2"
edition.workspace = true
license = "MIT"
description = "Public contracts for Lenso Providers and Autonomous Services."
repository = "https://github.com/LioRael/lenso"
homepage = "https://github.com/LioRael/lenso"
categories = ["web-programming", "development-tools"]
keywords = ["backend", "framework", "services"]
rust-version.workspace = true

[dependencies]
axum.workspace = true
lenso-contracts.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
