[package]
name = "lenso-service"
version = "0.1.2"
edition.workspace = true
license = "MIT"
description = "Public contracts for Lenso Providers and Autonomous Services."
repository = "https://github.com/LioRael/lenso"
homepage = "https://github.com/LioRael/lenso"
categories = ["web-programming", "development-tools"]
keywords = ["backend", "framework", "services"]
rust-version.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
http.workspace = true
jsonschema.workspace = true
jsonwebtoken.workspace = true
lenso-contracts.workspace = true
prost.workspace = true
prost-types.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tonic.workspace = true
tonic-prost.workspace = true

[lints]
workspace = true

[dev-dependencies]
serde_yaml.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

[build-dependencies]
prost-build.workspace = true
protoc-bin-vendored.workspace = true
tonic-prost-build.workspace = true
