[package]
name = "lenso-service"
version = "0.1.10"
edition.workspace = true
license = "MIT"
description = "Public contracts for Lenso Providers and Autonomous Services."
repository = "https://github.com/LioRael/lenso"
homepage = "https://github.com/LioRael/lenso"
categories = ["web-programming", "development-tools"]
keywords = ["backend", "framework", "services"]
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
http.workspace = true
jsonschema.workspace = true
jsonwebtoken.workspace = true
lenso-contracts.workspace = true
prost.workspace = true
prost-types.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
sqlx.workspace = true
spiffe.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
utoipa.workspace = true

[lints]
workspace = true

[dev-dependencies]
rustls.workspace = true
spiffe-rustls.workspace = true
spiffe-rustls-tokio.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

[build-dependencies]
prost-build.workspace = true
protoc-bin-vendored.workspace = true
tonic-prost-build.workspace = true
