[package]
name = "lenso-worker"
version = "0.1.20"
edition.workspace = true
license = "MIT"
description = "Background worker for the Lenso host runtime."
repository = "https://github.com/LioRael/lenso"
homepage = "https://github.com/LioRael/lenso"
categories = ["web-programming", "development-tools"]
keywords = ["backend", "framework", "worker"]
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
lenso-bootstrap.workspace = true
platform-core.workspace = true
platform-runtime.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
