[package]
name = "lenso"
version = "0.3.28"
edition.workspace = true
license = "MIT"
description = "Public facade for authoring and hosting Lenso backend modules."
repository = "https://github.com/LioRael/lenso"
homepage = "https://github.com/LioRael/lenso"
readme = "README.md"
rust-version.workspace = true
categories = ["web-programming", "development-tools"]
keywords = ["backend", "framework", "modules", "runtime"]

[dependencies]
anyhow = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
lenso-api = { workspace = true, optional = true }
lenso-bootstrap = { workspace = true, optional = true }
lenso-contracts.workspace = true
lenso-migrate = { workspace = true, optional = true }
lenso-worker = { workspace = true, optional = true }
platform-core = { workspace = true, optional = true }
platform-http = { workspace = true, optional = true }
platform-module = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
async-trait.workspace = true
chrono.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true

[features]
default = []
host = [
    "host-transactions",
    "dep:anyhow",
    "dep:axum",
    "dep:lenso-api",
    "dep:lenso-bootstrap",
    "dep:lenso-migrate",
    "dep:lenso-worker",
    "dep:platform-http",
    "dep:platform-module",
    "dep:tokio",
]
host-transactions = ["dep:platform-core"]

[[test]]
name = "host_outbox_relay"
required-features = ["host-transactions"]

[lints]
workspace = true
