[package]
name = "lenso-platform-admin-data"
version = "0.1.19"
edition.workspace = true
license = "MIT"
description = "Schema-admin data backend for the Lenso host."
repository = "https://github.com/LioRael/lenso"
homepage = "https://github.com/LioRael/lenso"
categories = ["web-programming", "development-tools"]
keywords = ["backend", "framework", "admin"]
rust-version.workspace = true

[lib]
name = "platform_admin_data"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
axum.workspace = true
lenso-service.workspace = true
platform-core.workspace = true
platform-http.workspace = true
platform-module.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
utoipa.workspace = true

[lints]
workspace = true
