[package]
name = "platform-admin"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
platform-core.workspace = true
platform-http.workspace = true
platform-module.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
utoipa.workspace = true

[dev-dependencies]
platform-testing.workspace = true

[lints]
workspace = true
