[package]
name = "lenso-platform-admin"
version = "0.1.12"
edition.workspace = true
license = "MIT"
description = "Runtime Console observability backend for the Lenso host."
repository = "https://github.com/LioRael/lenso"
homepage = "https://github.com/LioRael/lenso"
categories = ["web-programming", "development-tools"]
keywords = ["backend", "framework", "admin"]
rust-version.workspace = true

[lib]
name = "platform_admin"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
chrono.workspace = true
lenso-service.workspace = true
platform-core.workspace = true
platform-http.workspace = true
platform-module.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
utoipa.workspace = true

[dev-dependencies]
platform-testing.workspace = true

[lints]
workspace = true
