[package]
name = "lenso-platform-core"
version = "0.1.3"
edition.workspace = true
license = "MIT"
description = "Core runtime primitives for the Lenso backend framework."
repository = "https://github.com/LioRael/lenso"
homepage = "https://github.com/LioRael/lenso"
categories = ["web-programming", "development-tools"]
keywords = ["backend", "framework", "runtime"]
rust-version.workspace = true

[lib]
name = "platform_core"
path = "src/lib.rs"

[dependencies]
lenso-contracts.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
chrono.workspace = true
dotenvy.workspace = true
getrandom.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[lints]
workspace = true
