[package]
name = "platform-http"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
http.workspace = true
platform-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
utoipa.workspace = true

[dev-dependencies]
tokio.workspace = true
tower = { workspace = true, features = ["util"] }

[lints]
workspace = true
