[package]
name = "lenso-platform-http"
version = "0.1.10"
edition.workspace = true
license = "MIT"
description = "HTTP primitives for the Lenso backend framework."
repository = "https://github.com/LioRael/lenso"
homepage = "https://github.com/LioRael/lenso"
categories = ["web-programming", "development-tools"]
keywords = ["backend", "framework", "http"]
rust-version.workspace = true

[lib]
name = "platform_http"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
http.workspace = true
platform-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true

[dev-dependencies]
tokio.workspace = true
tower = { workspace = true, features = ["util"] }

[lints]
workspace = true
