[package]
name = "platform-module-remote"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
platform-core.workspace = true
platform-module.workspace = true
platform-runtime.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
axum.workspace = true
tokio.workspace = true

[lints]
workspace = true
