[package]
name = "lenso-platform-module-remote"
version = "0.1.16"
edition.workspace = true
license = "MIT"
description = "Remote module host support for the Lenso backend framework."
repository = "https://github.com/LioRael/lenso"
homepage = "https://github.com/LioRael/lenso"
categories = ["web-programming", "development-tools"]
keywords = ["backend", "framework", "modules"]
rust-version.workspace = true

[lib]
name = "platform_module_remote"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
axum.workspace = true
platform-core.workspace = true
platform-http.workspace = true
platform-module.workspace = true
platform-runtime.workspace = true
prost.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tonic = { workspace = true, features = ["tls-ring", "tls-webpki-roots"] }
tonic-prost.workspace = true
tracing.workspace = true
utoipa.workspace = true

[dev-dependencies]
platform-testing.workspace = true
sqlx.workspace = true
tokio.workspace = true
tonic = { workspace = true, features = ["router", "server"] }

[lints]
workspace = true
